2000-07-17  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileSet.cc: don't pass REG_NOSUB to regexec, this fixes
	  coredump on BSD. Reported by Andriy I Pilipenko <bamby@marka.net.ua>

2000-04-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: add Cookie support; allow disabling user-agent.
	* resource.cc: new setting http:cookie.

2000-04-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: don't disable ranges always, check condition before
	  disconnect.

2000-04-23  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: handle old servers version 0.9 correctly.
	* CmdExec.cc: actually commit the change for ^Z handling in `cd' command.

2000-04-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: query http:user-agent explicitly.
	* MirrorJob.cc: fix compilation problem.
	* CmdExec.cc: fix stall problem with glob.
	* DummyProto.h, complete.cc, pgetJob.h: fix warnings.

2000-04-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, Http.cc: fix SetError(SEE_ERRNO) usage.
	* MirrorJob.cc: add -T option.
	* commands.cc: update mirror help.

2000-04-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileSet.cc, FileSet.h: use class TimeInterval; add loose_prec arg.
	* MirrorJob.cc, MirrorJob.h: add --loose-time-prec; handle new mirror:
	  settings.
	* ResMgr.h: make some TimeInterval methods const.
	* ftpclass.cc: lower priority of messages for failed MDTM.
	* resource.cc: new settings mirror:time-prec and loose-time-prec.

2000-04-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: workaround for `class' in nameser.h (freebsd3.2).
	* ftpclass.cc: (TransferCheck) fix wrong error handling in passive
	  STORE mode, it lead to infinite loops.

2000-04-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, lftp.cc: add cmd:interactive setting.
	* commands.cc: encode special characters in bookmark target.
	* GetPass.cc: (readline_from_file) treat ^C as empty line, not eof.
